--- a/COMP371_FinalProject.vcxproj.filters
+++ b/COMP371_FinalProject.vcxproj.filters
@@ -16,6 +16,9 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
+    <Filter Include="Code\README">
+      <UniqueIdentifier>{e764602a-f29c-4b8b-98db-bd72385de0df}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -140,6 +143,9 @@
   <ItemGroup>
     <Text Include="particle_vs.glsl">
       <Filter>Code\Source Files</Filter>
+    </Text>
+    <Text Include="README\README.txt">
+      <Filter>Code\README</Filter>
     </Text>
   </ItemGroup>
 </Project>
