--- a/COMP371_FinalProject.vcxproj
+++ b/COMP371_FinalProject.vcxproj
@@ -205,6 +205,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="particle_vs.glsl" />
+    <Text Include="README\README.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
